[package]
name = "keyframe"
description = "A simple library for animation in Rust"

readme = "README.md"
repository = "https://github.com/HannesMann/keyframe"
license = "MIT"
version = "1.0.4"
edition = "2018"

authors = ["Hannes Mann <hannesmann2000@gmail.com>"]
keywords = ["animation", "transitions", "easing", "gamedev", "graphics"]
categories = ["mathematics", "graphics"]

[dependencies]
num-traits = "0.2.10"
mint = { version = "0.5.6", optional = true }

[dev-dependencies]
ggez = "0.6.0"
num-derive = "0.3.3"

[features]
default = ["mint_types"]

# Defines easing functions for mint's Vector2, Vector3, Vector4, Point2 and Point3
# Also required for BezierFunction
mint_types = ["mint"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/preview.html" ]
