[package]
name = "keyframe"
description = "A simple library for animation in Rust"

readme = "README.md"
repository = "https://github.com/HannesMann/keyframe"
license = "MIT"
version = "1.1.1"

edition = "2018"
rust-version = "1.51"

authors = ["Hannes Mann <hannesmann2000@gmail.com>"]
keywords = ["animation", "transitions", "easing", "gamedev", "graphics"]
categories = ["mathematics", "graphics"]

[dependencies]
num-traits = {version = "0.2.15", default-features = false, features = ["libm"]}
mint = { version = "0.5.9", optional = true }

[dev-dependencies]
ggez = "0.7.0"
num-derive = "0.3.3"

[features]
default = ["mint_types", "alloc"]

# Defines easing functions for mint's Vector2, Vector3, Vector4, Point2 and Point3
# Also required for BezierFunction
mint_types = ["mint"]
alloc = []

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/preview.html" ]